--- a/client/styles/style.css
+++ b/client/styles/style.css
@@ -158,7 +158,7 @@ box-shadow:         0px 1px 3px 0px rgba(0, 0, 0, 0.29);}
 .rating-value span:first-of-type{float:left;width:70%}
 .rating-value span:last-of-type{float:left;width:30%;font-size:13px;color:#777170;line-height:15px;}
 .rating-value{float:left;width:100%;clear:both}
-.dish-name{color:#e23814;font-size:13px;font-weight:700;width:100%;overflow:hidden; text-overflow: ellipsis;white-space: nowrap;margin-bottom:0;line-height:16px}
+.dish-name{padding:3px 0;color:#e23814;font-size:13px;font-weight:700;width:100%;overflow:hidden; text-overflow: ellipsis;white-space: nowrap;margin-bottom:0;line-height:16px}
 .resturant-name{color:#777170;font-size:13px;font-weight:300;margin-bottom:0;  overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
@@ -213,7 +213,7 @@ box-shadow:         0px 1px 3px 0px rgba(0, 0, 0, 0.29);}
 .htl-name{width:60%;float:left;padding:5px}
 .htl-rates{width:40%;float:left;padding:5px}
 .resturant-detail h3{overflow: hidden;text-overflow: ellipsis;white-space: nowrap; width: 100%;margin-left:-2px;color:#000;font-size:27px;margin-bottom:-5px;font-weight:700}
-.resturant-detail p{overflow: hidden;text-overflow: ellipsis;white-space: nowrap;width: 100%;text-align: justify;margin-left:-5px;color:#777170;font-size:16px;margin-bottom:0;float:left;width:100%}
+.resturant-detail p{padding-left:4px;overflow: hidden;text-overflow: ellipsis;white-space: nowrap;width: 100%;text-align: justify;margin-left:-5px;color:#777170;font-size:16px;margin-bottom:0;float:left;width:100%}
 .resturant-detail h3 span{margin-right:18px}
 .resturant-detail h3 span i{color:#777170}
 .resturant-rate .ion-ios-star{color:#ffda44;font-size:22px}
@@ -256,7 +256,7 @@ box-shadow:         0px 1px 3px 0px rgba(0, 0, 0, 0.29);}
     border-radius: 50%;
     float: none;
     height: 52px;
-    margin: 3px auto;padding:9px 7px 8px;
+    margin: 3px auto;padding:10px 8px 8px 9px;
     max-width: 52px !important;
     width: 52px !important;
 }
@@ -305,7 +305,7 @@ box-shadow:         0px 1px 3px 0px rgba(0, 0, 0, 0.29);}
 .review-form .location{top:12px;height:27px}
 .review-form input{border-bottom:1px solid;border-color:rgba(0, 0, 0, 0.4)}
 .review-form .icon-wrap input{margin-left: 10px;padding-left: 3px;padding-bottom: 10px;}
-.rate-box {text-align:center;margin-bottom:25px}
+.rate-box {text-align:center;}
 .rate-box a{display:inline-block;float:none;text-align:center;}
 .rate-box a img{height:100%;width:auto}
 .comments textarea{height:50px;background-color:transparent;border-bottom:1px solid;border-color:rgba(0, 0, 0, 0.4);  border-color: rgba(0, 0, 0, 0.4); margin-left: 28px;    padding-left: 3px;    padding-top: 0;}
@@ -380,8 +380,8 @@ box-shadow:         0px 1px 3px 0px rgba(0, 0, 0, 0.29);}
 .next-bar h2{float:left;width:73%;}
 .change-pass img{width: 28px!important}
 .mobi-50{float: left;width: 50%}
-.mobi-50-dish{float: left;width: 70%}
-.mobi-50-rates{float: left;width: 30%}
+.mobi-50-dish{float: left;width: 70%;padding: 0 5px;}
+.mobi-50-rates{float: left;width: 30%;padding: 0 5px;}
 .icn-wrap{display: table;height: 55px;text-align: center;
     vertical-align: middle;
     width: 100%;}
@@ -426,11 +426,11 @@ box-shadow:         0px 1px 3px 0px rgba(0, 0, 0, 0.29);}
 .image-box{padding: 0;}
 .image-box > img{border-bottom: 1px solid #ddd}
 .image-box p{padding: 0 5px}
-.dish-title{overflow: hidden;text-overflow: ellipsis;white-space: nowrap;width: 100%;text-align: justify;margin:-10px 0 0 -7px;font-size: 23px;font-weight:bold;color:#e23814;}
+.dish-title{overflow: hidden;text-overflow: ellipsis;white-space: nowrap;width: 100%;text-align: justify;margin:-10px 0 0 -2px;font-size: 23px;font-weight:bold;color:#e23814;}
 .locatio-pin{margin-right:5px;}
 .marker-wrap{text-align: right!important;}
 .resturant-detail .next-btn{margin:5px auto 0;display: inline-block;width: 100px;padding: 4px 0;font-size: 14px;text-transform: capitalize;}
-.res-nam{font-weight: 700;font-size:13px;margin: 0;width: 100%;overflow: hidden;text-overflow: ellipsis;white-space: nowrap;}
+.res-nam{padding:3px 0;font-weight: 700;font-size:13px;margin: 0;width: 100%;overflow: hidden;text-overflow: ellipsis;white-space: nowrap;}
 .suggest-wrap .resturant-name, .profile-posts .resturant-name{font-size:14px;}
 .profile-posts .star-img{margin-bottom: 0}
 .content-box{float: left;width: 100%;clear: both;margin-bottom: 5px}
@@ -535,6 +535,10 @@ border: none;
 .slick-slider {
   margin-bottom: 0px;
 }
+.other-details{float: left;width: 100%;padding: 5px 15px;}
+.other-details p{margin-bottom: 5px}
+.other-details p span{color: #222}
+.other-details p  a{color: #777170;text-decoration: none;}
 /*---------media-------*/
 @media not all, (-webkit-min-device-pixel-ratio: 1.5), not all, (min-resolution: 144dpi), (min-resolution: 1.5dppx){
   .bar{background-size:100% 0px}
