--- a/client/templates/feed.html
+++ b/client/templates/feed.html
@@ -6,13 +6,13 @@
              </div>
         </div>
     </ion-header-bar>
-    <ion-content>
+    <ion-content> 
         <div class="full_back suggest feed">
             <div ng-if="feed.posts != 'Loading'" class="row" ng-repeat="post in feed.posts">
                 <div class="col div1">
                     <div class="row">
                         <div class="col col-33">
-                            <div class="side-image-wrap" ng-click="feed.redirect(post._id,'dish')">
+                            <div class="side-image-wrap" ng-click="feed.toUserReveiw(post._id)">
                                 <img ng-if="post.videoThumb" src="{{feed.rootUrl}}/  {{post.videoThumb}}"/>
                                 <img ng-if="post.imageId" src="{{feed.rootUrl}}uploads/dishes/{{post.imageId}}.jpeg"/>
                             </div>
@@ -42,7 +42,7 @@
                     </div>
                 </div>
             </div>
-            <ion-infinite-scroll distance="1"
+            <ion-infinite-scroll
                 on-infinite="feed.loadMore()"
                 ng-if="!moredata">
             </ion-infinite-scroll>
