--- a/client/templates/other_userprofile.html
+++ b/client/templates/other_userprofile.html
@@ -56,7 +56,7 @@
               <div class="col col-33" ng-if="otheruser.posts[$index]">
                     <div class="div1 image-box">
                         <img ng-if="otheruser.posts[$index].videoThumb" src="{{otheruser.rootUrl}}/{{otheruser.posts[$index].videoThumb}}"/>
-                        <img ng-if="otheruser.posts[$index].imageId" src="{{otheruser.rootUrl}}/uploads/dishes/{{otheruser.posts[$index].imageId}}.jpeg"/>
+                        <img ng-if="otheruser.posts[$index].imageId" src="{{otheruser.rootUrl}}/uploads/dishes/{{otheruser.posts[$index].imageId}}.{{otheruser.posts[$index].extension}}"/>
                         <!--<img src="/no-image.png"> -->
                         <div class="star-img star-wrap">
                           <!-- <img src="/fill-star.png" alt=""/>
@@ -75,7 +75,7 @@
               <div class="col col-33" ng-if="otheruser.posts[$index + 1]">
                   <div class="div1 image-box">
                       <img ng-if="otheruser.posts[$index+1].videoThumb" src="{{otheruser.rootUrl}}/{{otheruser.posts[$index+1].videoThumb}}"/>
-                      <img ng-if="otheruser.posts[$index+1].imageId" src="{{otheruser.rootUrl}}/uploads/dishes/{{otheruser.posts[$index+1].imageId}}.jpeg"/>
+                      <img ng-if="otheruser.posts[$index+1].imageId" src="{{otheruser.rootUrl}}/uploads/dishes/{{otheruser.posts[$index+1].imageId}}.{{otheruser.posts[$index+1].extension}}"/>
                       <div class="star-img star-wrap">
                         <img ng-repeat="i in otheruser.getNumber(otheruser.posts[$index+1].rating) track by $index" src="/fill-star.png" alt=""/>
                         <img ng-if="otheruser.checkHalfStar(otheruser.posts[$index+1].rating)" src="/half-star.png" alt=""/>
@@ -88,7 +88,7 @@
               <div class="col col-33" ng-if="otheruser.posts[$index+ 2]">
                 <div class="div1 image-box">
                       <img ng-if="otheruser.posts[$index+2].videoThumb" src="{{otheruser.rootUrl}}/{{otheruser.posts[$index+2].videoThumb}}"/>
-                      <img ng-if="otheruser.posts[$index+2].imageId" src="{{otheruser.rootUrl}}/uploads/dishes/{{otheruser.posts[$index+ 2].imageId}}.jpeg"/>
+                      <img ng-if="otheruser.posts[$index+2].imageId" src="{{otheruser.rootUrl}}/uploads/dishes/{{otheruser.posts[$index+ 2].imageId}}.{{otheruser.posts[$index+2].extension}}"/>
                       <div class="star-img star-wrap">
                         <img ng-repeat="i in otheruser.getNumber(otheruser.posts[$index+2].rating) track by $index" src="/fill-star.png" alt=""/>
                         <img ng-if="otheruser.checkHalfStar(otheruser.posts[$index+2].rating)" src="/half-star.png" alt=""/>
