--- a/client/templates/post_review.html
+++ b/client/templates/post_review.html
@@ -45,7 +45,7 @@
                     </ion-list>
                 </div>
             </div>
-            <a href="javascript:void(0)" ng-click="content.postAndSave(isChecked)" class="next-btn">Post Review!</a>
+            <a href="javascript:void(0)" ng-click="content.postAndSave(isChecked)" class="next-btn">Post Review</a>
    		</div>
        
 	</ion-content>
