--- a/client/templates/profile.html
+++ b/client/templates/profile.html
@@ -2,7 +2,7 @@
   <ion-header-bar align-title="left" class="bar-positive">
     <div class="bar bar-header bar-light head_bar">
            <div class="back_arrrow">
-                <h2>{{profile.halfFirstname}}. {{profile.lastname}}</h2>
+                <h2>{{currentUser.username}}</h2>
            </div>
     </div>
   </ion-header-bar>
@@ -40,7 +40,7 @@
             <div class="row">
               <div class="col user-del">
                   <div class="user-name">
-                    <h5>{{profile.firstname}} {{profile.lastname}}</h5>
+                    <h5>{{currentUser.username}}</h5>
                   </div>
                     <p ng-if="profile.profile.bio">{{profile.profile.bio}}</p>
                 </div>
@@ -49,7 +49,7 @@
         <div class="full_back profile-posts suggest" ng-class="profile.posts.length==0 ? 'no-cnt' : ''"> <!-- Add no-cnt class when there is no record in posts -->
           <div class="row">
             <div class="col">
-              <h4 class="your-post">Your Post</h4>
+              <h4 class="your-post">Reviews by {{currentUser.username}}</h4>
             </div>
           </div>
             <div class="row" ng-repeat="product in profile.posts" ng-if="$index % 3 == 0">
@@ -99,7 +99,12 @@
                 </div>
               </div>
             </div>
-            <div class="row no-record" ng-if="!profile.posts.length">No post found!</div>
+            <div class="row no-record" ng-if="!profile.posts.length && profile.postLoading">
+              No post found!
+            </div>
+            <div class="row no-record" ng-if="!profile.posts.length && !profile.postLoading">
+              Loading...
+            </div>
         </div>
   </ion-content>
     
