--- a/client/templates/location.html
+++ b/client/templates/location.html
@@ -1,7 +1,7 @@
 <ion-view view-title="signIn">
   <ion-header-bar align-title="left" class="bar-positive">
-    <div class="bar bar-header bar-light head_bar">
-	    <div class="back_arrrow next-bar">
+    <div class="bar bar-header bar-light head_bar rev-header">
+	    <div class="back_arrrow">
 	    	<span class="sp2"><a ui-sref="filter"><img src="./left-arrow.png" alt=""/></a></span>	
 	    	<h2 class="logo-ig"><img src="./thedish.png"></h2>
 	    </div>
