--- a/client/templates/filter.html
+++ b/client/templates/filter.html
@@ -1,7 +1,7 @@
 <ion-view view-title="signIn">
     <ion-header-bar align-title="left" class="bar-positive">
 	    <div class="bar bar-header bar-light head_bar">
-		    <div class="back_arrrow next-bar">
+		    <div class="back_arrrow">
 		    	<span class="sp2"><a ui-sref="tab.review"><img ng-src="/left-arrow.png" alt=""/></a></span>	
 		    	<h2 class="logo-ig"><img ng-src="/thedish.png"></h2>
 		    </div>
