--- a/client/templates/review.html
+++ b/client/templates/review.html
@@ -2,7 +2,7 @@
   <ion-header-bar align-title="left" class="bar-positive">
     <div class="bar bar-header bar-light head_bar rev-header">
       <div class="back_arrrow">
-        <span class="sp2"><a ng-click="review.previousView()"><img src="/left-arrow.png" alt=""/></a></span>  
+        <!-- <span class="sp2"><a ng-click="review.previousView()"><img src="/left-arrow.png" alt=""/></a></span>  --> 
         <h2 class="logo-ig"><img src="/thedish.png"></h2>
       </div>
     </div>
